Minot changes in LLMBasedTestSuiteReader.java